--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       
   publish:
     runs-on: ubuntu-latest
-    
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: Publish the Docker image
