--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,7 +14,6 @@ jobs:
 
     runs-on: ubuntu-latest
     environment: testing
-    
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -32,8 +31,8 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Test with custom test
       env:
         TOKEN: ${{ secrets.TOKEN }}
       run: |
-        pytest
+        python src/test/test_discordBot.py $TOKEN
