--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -7,7 +7,7 @@ jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    environment: testing
+    environment: publishing
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
