--- a/ababot/dir_macros/Cargo.toml
+++ b/ababot/dir_macros/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+syn = "1.0.102"
+
+[lib]
+proc-macro = true
