--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,11 @@
 version: 2
 updates:
-- package-ecosystem: pip
-  directory: "/"
+- package-ecosystem: cargo
+  directory: "/ababot"
   schedule:
-    interval: daily
+    interval: "weekly"
     time: "04:00"
   open-pull-requests-limit: 10
+  ignore:
+    - dependency-name: "semver"
+    - dependency-name: "crates-io"
