--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: "./ababot -> target"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -33,6 +36,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: "./ababot -> target"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -51,6 +57,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: "./ababot -> target"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -58,8 +67,6 @@ jobs:
       - name: Test
         run: cargo build
 
-
-  # This should definetly be cached, everything should, but especially this
   push:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -76,6 +83,9 @@ jobs:
         if: ${{ matrix.target == 'amd64' }}
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: "./ababot -> target"
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
@@ -92,7 +102,7 @@ jobs:
       - name: Compile
         run: cross build --release --target ${{ env.TARGET_LONG }}
       - name: Move
-        run: mv target/${{ env.TARGET_LONG }}/release/casa_server ./casa_server
+        run: mv target/${{ env.TARGET_LONG }}/release/ababot ./ababot
 
       - name: Build and push
         uses: docker/build-push-action@v3
@@ -100,4 +110,4 @@ jobs:
           context: .
           platforms: linux/${{ matrix.target }}
           push: true
-          tags: areskiko/casa_server:${{ env.TAG }}
+          tags: areskiko/ababot:${{ env.TAG }}
