--- a/.github/workflows/docker-image-release.yml
+++ b/.github/workflows/docker-image-release.yml
@@ -1,20 +1,125 @@
-name: Publish Docker image
+name: Publish Docker image version
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - "v*.*.*"
+
 jobs:
-  push_to_registry:
+  validate:
+    name: Validate project
+    runs-on: ubuntu-latest
+    environment: publishing
+    defaults:
+      run:
+        working-directory: ./ababot
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: "./ababot -> target"
+      - name: Install rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - name: Validate
+        run: cargo check
+
+  test:
+    name: Test project
+    runs-on: ubuntu-latest
+    environment: publishing
+    needs: [validate]
+    defaults:
+      run:
+        working-directory: ./ababot
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: "./ababot -> target"
+      - name: Install rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - name: Test
+        run: cargo test
+
+  build:
+    name: Build project
+    runs-on: ubuntu-latest
+    environment: publishing
+    needs: [test, validate]
+    defaults:
+      run:
+        working-directory: ./ababot
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: "./ababot -> target"
+      - name: Install rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - name: Test
+        run: cargo build
+
+  push:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     environment: publishing
+    defaults:
+      run:
+        working-directory: ./ababot
+    strategy:
+      matrix:
+        target: [arm/v7, amd64]
     steps:
-      - name: Check out the repo
+      - name: Write long target
+        run: echo TARGET_LONG=armv7-unknown-linux-musleabihf >> $GITHUB_ENV && echo TAG=arm >> $GITHUB_ENV
+        if: ${{ matrix.target == 'arm/v7' }}
+      - name: Write long target
+        run: echo TARGET_LONG=x86_64-unknown-linux-musl >> $GITHUB_ENV && echo TAG=amd >> $GITHUB_ENV
+        if: ${{ matrix.target == 'amd64' }}
+      - name: Checkout
         uses: actions/checkout@v2
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: "./ababot -> target"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: areskiko/ababot
-          tags: ${{ github.event.release.tag_name }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Install rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - name: Install cross
+        run: cargo install cross
+      - name: Compile
+        run: cross build --release --target ${{ env.TARGET_LONG }}
+      - name: Move
+        run: mv target/${{ env.TARGET_LONG }}/release/ababot ./ababot
+      - name: Copy
+        run: cp ababot ababot-${{ env.tag }}
+      - name: Set tag env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/${{ matrix.target }}
+          push: true
+          tags: areskiko/ababot:${{ env.TAG }}-${{ env.RELEASE_VERSION }}
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ababot-${{ env.TAG }}
