--- a/.github/workflows/docker-image-release.yml
+++ b/.github/workflows/docker-image-release.yml
@@ -47,31 +47,12 @@ jobs:
       - name: Test
         run: cargo test
 
-  build:
-    name: Build project
-    runs-on: ubuntu-latest
-    environment: publishing
-    needs: [test, validate]
-    defaults:
-      run:
-        working-directory: ./ababot
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
-        with: "./ababot -> target"
-      - name: Install rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - name: Test
-        run: cargo build
 
   push:
-    name: Push Docker image to Docker Hub
+    name: Build and Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     environment: publishing
+    needs: [test]
     defaults:
       run:
         working-directory: ./ababot
