--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Compile
         run: cross build --release --target ${{ env.TARGET_LONG }}
       - name: Move
-        run: mv target/${{ env.TARGET_LONG }}/release/ababot ./ababot
+        run: mv target/${{ env.TARGET_LONG }}/release/bot ./ababot
 
       - name: Build and push
         uses: docker/build-push-action@v3
