--- a/.github/workflows/docker-image-release.yml
+++ b/.github/workflows/docker-image-release.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Compile
         run: cross build --release --target ${{ env.TARGET_LONG }}
       - name: Move
-        run: mv target/${{ env.TARGET_LONG }}/release/ababot ./ababot
+        run: mv target/${{ env.TARGET_LONG }}/release/bot ./ababot
       - name: Copy
         run: cp ababot ababot-${{ env.tag }}
       - name: Set tag env
