--- a/.github/workflows/docker-image-release.yml
+++ b/.github/workflows/docker-image-release.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Cache
         uses: Swatinem/rust-cache@v2
-        with: "./ababot -> target"
+        with: 
+          workspaces: "./ababot -> target"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -39,7 +40,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Cache
         uses: Swatinem/rust-cache@v2
-        with: "./ababot -> target"
+        with: 
+          workspaces: "./ababot -> target"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -70,7 +72,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Cache
         uses: Swatinem/rust-cache@v2
-        with: "./ababot -> target"
+        with: 
+          workspaces: "./ababot -> target"
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
