--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Cache
         uses: Swatinem/rust-cache@v2
-        with: "./ababot -> target"
+        with: 
+          workspaces: "./ababot -> target"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
