--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -44,5 +44,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - name: Test
-        run: cargo test
+      - name: Test macros
+        run: cargo test dir_macros
+      - name: Test bot
+        run: cargo test bot
