--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -40,6 +40,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        with: 
+          workspaces: "./ababot -> target"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
