--- a/.github/workflows/docker-image-release.yml
+++ b/.github/workflows/docker-image-release.yml
@@ -88,6 +88,7 @@ jobs:
         run: cargo install cross
       - name: Compile
         run: cross build --release --target ${{ env.TARGET_LONG }}
+        working-directory: ababot
       - name: Move
         run: mv target/${{ env.TARGET_LONG }}/release/bot ./ababot
       - name: Copy
