--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -92,6 +92,7 @@ jobs:
         working-directory: ababot
       - name: Move
         run: mv target/${{ env.TARGET_LONG }}/release/bot ../ababot.bin
+        working-directory: ababot
 
       - name: Build and push
         uses: docker/build-push-action@v3
