--- a/.github/workflows/docker-image-release.yml
+++ b/.github/workflows/docker-image-release.yml
@@ -90,7 +90,8 @@ jobs:
         run: cross build --release --target ${{ env.TARGET_LONG }}
         working-directory: ababot
       - name: Move
-        run: mv target/${{ env.TARGET_LONG }}/release/bot ./ababot
+        run: mv target/${{ env.TARGET_LONG }}/release/bot ../ababot.bin
+        working-directory: ababot
       - name: Copy
         run: cp ababot ababot-${{ env.tag }}
       - name: Set tag env
