--- a/ababot/bot/Cargo.toml
+++ b/ababot/bot/Cargo.toml
@@ -13,3 +13,6 @@ serenity = { version = "0.11", default-features = false, features = ["client", "
 tracing = "0.1"
 tokio = { version = "1", features =  ["full"] }
 rand = { version = "0.8", optional = true }
+serde = "1.0.147"
+serde_json = "1.0.87"
+yahoo_finance_api = "1.3.0"
