--- a/ababot/bot/Cargo.toml
+++ b/ababot/bot/Cargo.toml
@@ -16,3 +16,4 @@ rand = { version = "0.8", optional = true }
 serde = "1.0.0"
 serde_json = "1.0.0"
 yahoo_finance_api = "=1.2.2"
+openssl = { version = '0.10', features = ["vendored"] }
