--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -19,6 +19,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with: 
           workspaces: "./ababot -> target"
+          shared-key: "crates.io"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -41,6 +42,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with: 
           workspaces: "./ababot -> target"
+          shared-key: "crates.io"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -71,6 +73,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with: 
           workspaces: "./ababot -> target"
+          shared-key: "crates.io"
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
