--- a/.github/workflows/docker-image-release.yml
+++ b/.github/workflows/docker-image-release.yml
@@ -20,6 +20,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with: 
           workspaces: "./ababot -> target"
+          shared-key: "crates.io"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -42,6 +43,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with: 
           workspaces: "./ababot -> target"
+          shared-key: "crates.io"
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
@@ -73,6 +75,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with: 
           workspaces: "./ababot -> target"
+          shared-key: "crates.io"
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
