--- a/ababot/bot/Cargo.toml
+++ b/ababot/bot/Cargo.toml
@@ -47,3 +47,7 @@ reqwest = "0.11"
 
 # Threading
 rayon = "1.5"
+
+# GPU
+gpgpu = { git = "https://github.com/UpsettingBoy/gpgpu-rs", branch = "dev" }
+bytemuck = "1.12.3"
