--- a/ababot/bot/Cargo.toml
+++ b/ababot/bot/Cargo.toml
@@ -56,3 +56,6 @@ rayon = "1.6"
 gpgpu = { git = "https://github.com/UpsettingBoy/gpgpu-rs", branch = "dev" }
 bytemuck = "1.12.3"
 bichannel = "0.0.4"
+
+# Image manipulation
+image = "0.24.5"
