Redesign gathering of information

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3.9"  # optional since v1.27.0
 services:
   ababot:
-    image: areskiko/ababot:${PLATFORM}
+    #image: areskiko/ababot:${PLATFORM}
+    build: .
     restart: always
 
     volumes:
@@ -9,8 +10,8 @@ services:
     
     # Settings
     environment:
-      - GUILD_ID=
-      - DISCORD_TOKEN=
+      - GUILD_ID=743914289714298933
+      - DISCORD_TOKEN=NDU2MzUxMjc5MDExMzMyMTA3.G6UoDE.1Rpq0qYJRsUjOuWufdlxHetAZg44PljtQA4PCk
       - LOG_LEVEL=info # defaults to info
       - TZ=Europe/Oslo
   
