--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,4 @@ updates:
   ignore:
     - dependency-name: "semver"
     - dependency-name: "crates-io"
+      update-types: ["version-update:semver-patch"]
